--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "draft-js": "^0.11.7",
+    "immutable": "^5.0.0-beta.4",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
